Few minor fixes: Imports order adjusted; Fixed gap error.

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -21,7 +21,7 @@
       $align-items: center
     );
 
-    gap: $spacer-xxxs;
+    column-gap: $spacer-xxxs;
     text-decoration: none;
 
     &__image {
